# basic-compiler

./: .gitignore  Cargo.toml
src/: lexer.rs  main.rs  parser.rs
tests/: compiler.rs
